--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    color: deeppink;
-    text-align: center;
+    color: green;
+        text-align: center;
     font-family: "arial";
 }
